0.4.2:
- General updates:
--- Marked compatible with Foundry v0.8.7
--- Fixed test for actor creation permissions for clients.

0.4.1:
- General updates:
--- Marked compatible with Foundry v0.8.6
- PAIZO Block updates:
--- Added support for non-combat abilities in the parsing.

0.3.15:
- PAIZO Block updates:
--- Implemented a simple mechanism for finding the name and CR of a creature if they are on separate lines.
--- Sanitize input by getting rid of \r\n in favor of just \n for newline parsing. This should address cross-platform parsing surprises.
--- Fixed the parsing of DR that was not a singular value, i.e. "5 / piercing or slashing" would throw a parsing error.

0.3.14:
- PAIZO Block updates:
--- Added support for the latest ecology changes in Starfinder v0.9.
--- Fixed Issue #20: Parser ignored attack damage rolls if it had no additional damage on top of the roll.

0.3.13:
- General updates:
--- Marked compatible with Foundry v0.7.9
- PAIZO Block updates:
--- Languages (and other traits that have custom fields) now correctly separate their entries using semicolon instead of comma.
--- Additional speed properties now parse correctly.

0.3.12:
- General updates:
--- Marked compatible with Foundry v0.7.5

0.3.11:
- General updates:
--- Weapons and equipment are now always proficient.
- PAIZO Block updates:
--- Added 'constant' as a supported keyword for spell-like abilities.
--- Spell-like abilities no longer mark in the spell name how many times per day it is allowed, and instead fill it into the uses field.

0.3.10:
- PAIZO Block updates:
--- Added 'constant' as a supported keyword for spell-like abilities.
--- Spell-like abilities no longer overwrite the spell activation cost, and instead mark in the spell name how many times per day it is allowed.
--- Fixing an item merging issue when the quantity is not defined.


0.3.9:
- General updates: